--- a/package.json
+++ b/package.json
@@ -6,107 +6,107 @@
         "dev": "vite"
     },
     "devDependencies": {
-        "@headlessui/react": "^2.0.0",
-        "@inertiajs/react": "^1.0.0",
-        "@tailwindcss/forms": "^0.5.3",
-        "@types/file-saver": "^2.0.7",
-        "@types/lodash.debounce": "^4.0.9",
-        "@types/node": "^18.13.0",
-        "@types/react": "^18.0.28",
-        "@types/react-dom": "^18.0.10",
-        "@vitejs/plugin-react": "^4.2.0",
-        "autoprefixer": "^10.4.21",
-        "axios": "^1.7.4",
-        "concurrently": "^9.0.1",
-        "daisyui": "^4.12.14",
-        "laravel-echo": "^2.0.2",
-        "laravel-vite-plugin": "^1.0",
-        "postcss": "^8.5.3",
-        "pusher-js": "^8.4.0",
-        "react": "^18.3.1",
-        "react-dom": "^18.3.1",
-        "tailwindcss": "^3.4.17",
-        "typescript": "^5.0.2",
-        "vite": "^5.0"
+        "@headlessui/react": "2.0.0",
+        "@inertiajs/react": "1.0.0",
+        "@tailwindcss/forms": "0.5.3",
+        "@types/file-saver": "2.0.7",
+        "@types/lodash.debounce": "4.0.9",
+        "@types/node": "18.13.0",
+        "@types/react": "18.0.28",
+        "@types/react-dom": "18.0.10",
+        "@vitejs/plugin-react": "4.2.0",
+        "autoprefixer": "10.4.21",
+        "axios": "1.7.4",
+        "concurrently": "9.0.1",
+        "daisyui": "4.12.14",
+        "laravel-echo": "2.0.2",
+        "laravel-vite-plugin": "1.0",
+        "postcss": "8.5.3",
+        "pusher-js": "8.4.0",
+        "react": "18.3.1",
+        "react-dom": "18.3.1",
+        "tailwindcss": "3.4.17",
+        "typescript": "5.0.2",
+        "vite": "5.0"
     },
     "dependencies": {
-        "@emotion/react": "^11.14.0",
-        "@emotion/styled": "^11.14.0",
-        "@fullcalendar/core": "^6.1.15",
-        "@fullcalendar/daygrid": "^6.1.15",
-        "@fullcalendar/interaction": "^6.1.15",
-        "@fullcalendar/list": "^6.1.15",
-        "@fullcalendar/react": "^6.1.15",
-        "@fullcalendar/timegrid": "^6.1.15",
-        "@heroui/calendar": "^2.2.15",
-        "@heroui/image": "^2.2.10",
-        "@heroui/radio": "^2.3.14",
-        "@heroui/react": "^2.7.4",
-        "@heroui/spacer": "^2.2.11",
-        "@heroui/switch": "^2.2.13",
-        "@heroui/system": "^2.4.11",
-        "@heroui/theme": "^2.4.11",
-        "@hookform/resolvers": "^3.9.1",
-        "@mui/icons-material": "^6.3.1",
-        "@mui/lab": "^6.0.0-beta.31",
-        "@mui/material": "^6.4.8",
-        "@mui/x-date-pickers": "^7.28.3",
-        "@radix-ui/react-aspect-ratio": "^1.1.0",
-        "@radix-ui/react-avatar": "^1.1.1",
-        "@radix-ui/react-checkbox": "^1.1.4",
-        "@radix-ui/react-collapsible": "^1.1.1",
-        "@radix-ui/react-dialog": "^1.1.14",
-        "@radix-ui/react-dropdown-menu": "^2.1.2",
-        "@radix-ui/react-hover-card": "^1.1.4",
-        "@radix-ui/react-icons": "^1.3.0",
-        "@radix-ui/react-label": "^2.1.0",
-        "@radix-ui/react-popover": "^1.1.2",
-        "@radix-ui/react-progress": "^1.1.1",
-        "@radix-ui/react-select": "^2.1.2",
-        "@radix-ui/react-separator": "^1.1.0",
-        "@radix-ui/react-slider": "^1.2.2",
-        "@radix-ui/react-slot": "^1.1.2",
-        "@radix-ui/react-tabs": "^1.1.1",
-        "@radix-ui/react-toast": "^1.2.4",
-        "@radix-ui/react-toggle": "^1.1.0",
-        "@radix-ui/react-toggle-group": "^1.1.0",
-        "@radix-ui/react-tooltip": "^1.1.8",
-        "@react-spring/web": "^9.7.5",
-        "@tanstack/react-table": "^8.20.6",
-        "@types/recharts": "^1.8.29",
-        "chart.js": "^4.4.9",
-        "class-variance-authority": "^0.7.0",
-        "clsx": "^2.1.1",
-        "cmdk": "^1.1.1",
-        "dayjs": "^1.11.13",
-        "docx": "^9.3.0",
-        "embla-carousel-react": "^8.5.2",
-        "file-saver": "^2.0.5",
-        "framer-motion": "^12.4.10",
-        "html-to-image": "^1.11.13",
-        "html2canvas": "^1.4.1",
-        "interactjs": "^1.10.27",
-        "intro.js": "^7.2.0",
-        "jspdf": "^2.5.2",
-        "lodash.debounce": "^4.0.8",
-        "lucide-react": "^0.453.0",
-        "react-chartjs-2": "^5.3.0",
-        "react-circular-progressbar": "^2.2.0",
-        "react-colorful": "^5.6.1",
-        "react-dnd": "^16.0.1",
-        "react-dnd-html5-backend": "^16.0.1",
-        "react-draggable": "^4.4.6",
-        "react-hook-form": "^7.53.2",
-        "react-hot-toast": "^2.4.1",
-        "react-icons": "^5.4.0",
-        "react-loading-indicators": "^1.0.1",
-        "recharts": "^2.15.1",
-        "sonner": "^1.5.0",
-        "tailwind-merge": "^2.5.4",
-        "tailwindcss-animate": "^1.0.7",
-        "vaul": "^1.1.1",
-        "xlsx": "^0.18.5",
-        "xlsx-js-style": "^1.2.0",
-        "zod": "^3.23.8"
+        "@emotion/react": "11.14.0",
+        "@emotion/styled": "11.14.0",
+        "@fullcalendar/core": "6.1.15",
+        "@fullcalendar/daygrid": "6.1.15",
+        "@fullcalendar/interaction": "6.1.15",
+        "@fullcalendar/list": "6.1.15",
+        "@fullcalendar/react": "6.1.15",
+        "@fullcalendar/timegrid": "6.1.15",
+        "@heroui/calendar": "2.2.15",
+        "@heroui/image": "2.2.10",
+        "@heroui/radio": "2.3.14",
+        "@heroui/react": "2.7.4",
+        "@heroui/spacer": "2.2.11",
+        "@heroui/switch": "2.2.13",
+        "@heroui/system": "2.4.11",
+        "@heroui/theme": "2.4.11",
+        "@hookform/resolvers": "3.9.1",
+        "@mui/icons-material": "6.3.1",
+        "@mui/lab": "6.0.0-beta.31",
+        "@mui/material": "6.4.8",
+        "@mui/x-date-pickers": "7.28.3",
+        "@radix-ui/react-aspect-ratio": "1.1.0",
+        "@radix-ui/react-avatar": "1.1.1",
+        "@radix-ui/react-checkbox": "1.1.4",
+        "@radix-ui/react-collapsible": "1.1.1",
+        "@radix-ui/react-dialog": "1.1.14",
+        "@radix-ui/react-dropdown-menu": "2.1.2",
+        "@radix-ui/react-hover-card": "1.1.4",
+        "@radix-ui/react-icons": "1.3.0",
+        "@radix-ui/react-label": "2.1.0",
+        "@radix-ui/react-popover": "1.1.2",
+        "@radix-ui/react-progress": "1.1.1",
+        "@radix-ui/react-select": "2.1.2",
+        "@radix-ui/react-separator": "1.1.0",
+        "@radix-ui/react-slider": "1.2.2",
+        "@radix-ui/react-slot": "1.1.2",
+        "@radix-ui/react-tabs": "1.1.1",
+        "@radix-ui/react-toast": "1.2.4",
+        "@radix-ui/react-toggle": "1.1.0",
+        "@radix-ui/react-toggle-group": "1.1.0",
+        "@radix-ui/react-tooltip": "1.1.8",
+        "@react-spring/web": "9.7.5",
+        "@tanstack/react-table": "8.20.6",
+        "@types/recharts": "1.8.29",
+        "chart.js": "4.4.9",
+        "class-variance-authority": "0.7.0",
+        "clsx": "2.1.1",
+        "cmdk": "1.1.1",
+        "dayjs": "1.11.13",
+        "docx": "9.3.0",
+        "embla-carousel-react": "8.5.2",
+        "file-saver": "2.0.5",
+        "framer-motion": "12.4.10",
+        "html-to-image": "1.11.13",
+        "html2canvas": "1.4.1",
+        "interactjs": "1.10.27",
+        "intro.js": "7.2.0",
+        "jspdf": "2.5.2",
+        "lodash.debounce": "4.0.8",
+        "lucide-react": "0.453.0",
+        "react-chartjs-2": "5.3.0",
+        "react-circular-progressbar": "2.2.0",
+        "react-colorful": "5.6.1",
+        "react-dnd": "16.0.1",
+        "react-dnd-html5-backend": "16.0.1",
+        "react-draggable": "4.4.6",
+        "react-hook-form": "7.53.2",
+        "react-hot-toast": "2.4.1",
+        "react-icons": "5.4.0",
+        "react-loading-indicators": "1.0.1",
+        "recharts": "2.15.1",
+        "sonner": "1.5.0",
+        "tailwind-merge": "2.5.4",
+        "tailwindcss-animate": "1.0.7",
+        "vaul": "1.1.1",
+        "xlsx": "0.18.5",
+        "xlsx-js-style": "1.2.0",
+        "zod": "3.23.8"
     }
 }
