--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
         "docx": "9.3.0",
         "embla-carousel-react": "8.5.2",
         "file-saver": "2.0.5",
-        "framer-motion": "12.4.10",
+        "framer-motion": "^12.4.10",
         "html-to-image": "1.11.13",
         "html2canvas": "1.4.1",
         "interactjs": "1.10.27",
